--- a/settings.gradle
+++ b/settings.gradle
@@ -15,3 +15,4 @@ dependencyResolutionManagement {
 rootProject.name = "JetpackComposeLessons"
 include ':app'
 include ':wheatherappcompose'
+include ':buttonnavigationlesson'
