--- a/wheatherappcompose/build.gradle
+++ b/wheatherappcompose/build.gradle
@@ -62,6 +62,7 @@ dependencies {
     implementation "com.google.accompanist:accompanist-pager:0.19.0"
     implementation "com.google.accompanist:accompanist-pager-indicators:0.19.0"
     implementation "com.android.volley:volley:1.2.1"
+    implementation 'androidx.core:core-ktx:+'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
